# Matrix-Operations-Server

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: client.h
client/source/: client.cpp  main.cpp
include/: server.h  session.h
server/: CMakeLists.txt
server/include/: server.h  session.h  tree.h
server/source/: main.cpp  server.cpp  session.cpp  tree.cpp
source/: server.cpp  session.cpp
